# build-tools

./: README.md
.github/workflows/: ci.yml
cmake/: FindJUCE.cmake  MonakaiBuildUtils.cmake
configs/: macos-xcode.cmake  ubuntu-gcc.cmake  windows-vs2022.cmake
docs/: contributing.md  cross-platform-guide.md  troubleshooting.md
juce-template/: CMakeLists.txt
juce-template/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: Build-Windows.ps1
